# r-fastapi

./: .gitignore  Containerfile  Makefile  README.md  data.json  model.R  model_test.py  package-versions.R  pyproject.toml
app/: main.py
