[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["xyz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pandas = "^2.1.3"
rpy2 = "^3.5.14"
locust = "^2.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
